--- a/src/Vidly/Vidly.csproj
+++ b/src/Vidly/Vidly.csproj
@@ -174,17 +174,34 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905020912128_Initial Model.cs" />
+    <Compile Include="Migrations\201905020912128_Initial Model.Designer.cs">
+      <DependentUpon>201905020912128_Initial Model.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201905020931425_Customer Model.cs" />
+    <Compile Include="Migrations\201905020931425_Customer Model.Designer.cs">
+      <DependentUpon>201905020931425_Customer Model.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201905020939359_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201905020939359_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201905020939359_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201905021229189_AddMembershipType.cs" />
+    <Compile Include="Migrations\201905021229189_AddMembershipType.Designer.cs">
+      <DependentUpon>201905021229189_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -248,6 +265,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
     <Content Include="Views\Movies\Random.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -264,6 +282,20 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201905020912128_Initial Model.resx">
+      <DependentUpon>201905020912128_Initial Model.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905020931425_Customer Model.resx">
+      <DependentUpon>201905020931425_Customer Model.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905020939359_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201905020939359_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905021229189_AddMembershipType.resx">
+      <DependentUpon>201905021229189_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
