--- a/src/Vidly/Vidly.csproj
+++ b/src/Vidly/Vidly.csproj
@@ -217,6 +217,14 @@
     <Compile Include="Migrations\201905041026294_UpdatedCustomerModel.Designer.cs">
       <DependentUpon>201905041026294_UpdatedCustomerModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905050623518_MovieGenre.cs" />
+    <Compile Include="Migrations\201905050623518_MovieGenre.Designer.cs">
+      <DependentUpon>201905050623518_MovieGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201905050627365_PopulateMovieGenre.cs" />
+    <Compile Include="Migrations\201905050627365_PopulateMovieGenre.Designer.cs">
+      <DependentUpon>201905050627365_PopulateMovieGenre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -224,9 +232,11 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\MovieGenre.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModel\CustomerFormViewModel.cs" />
+    <Compile Include="ViewModel\MovieFormViewModel.cs" />
     <Compile Include="ViewModel\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -290,6 +300,9 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Customer\CustomerForm.cshtml" />
     <Content Include="Views\Customer\Details.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -334,6 +347,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201905041026294_UpdatedCustomerModel.resx">
       <DependentUpon>201905041026294_UpdatedCustomerModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905050623518_MovieGenre.resx">
+      <DependentUpon>201905050623518_MovieGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905050627365_PopulateMovieGenre.resx">
+      <DependentUpon>201905050627365_PopulateMovieGenre.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
